[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxspec"
version = "0.1.0"
description = "X-ray spectral analysis using PyXSpec"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "pyyaml>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyxspec*"]